helm/values/laravel/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: laravel-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - example.com
        - develop.example.com
      secretName: laravel-kubernetes-tls
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              serviceName: laravel-kubernetes-lamp
              servicePort: 80
    - host: develop.example.com
      http:
        paths:
          - backend:
              serviceName: laravel-kubernetes-lamp
              servicePort: 80
